# rust-workspace

./: .gitignore  Cargo.toml  fleet.toml
act-web/: Cargo.toml
act-web/src/: main.rs
act-web/tests/: node_test.rs
helloworld-tonic/: Cargo.toml  build.rs  readme.md
helloworld-tonic/client/: client.js  helloworld_grpc_web_pb.js
helloworld-tonic/proto/: helloworld.proto
helloworld-tonic/src/: server.rs
l-polars/: Cargo.toml
l-polars/csv/: test.csv
l-polars/src/: main.rs
l-reqwest/: Cargo.toml  fleet.toml
l-reqwest/src/: main.rs  main1.rs
l-rlp/: Cargo.toml
l-rlp/examples/: 4.rs  list01.rs  list02.rs  string01.rs  string02.rs
l-rlp/src/: main.rs
l-sea-orm/: .env  Cargo.toml
l-sea-orm/src/: main.rs
l-sea-orm/src/entity/: mod.rs  prelude.rs
l-tracing/: Cargo.toml  fleet.toml
l-tracing/src/: main.rs
ownership/: Cargo.toml
ownership/examples/: t1.rs  t2.rs  t3.rs
ownership/src/: main.rs
q-ctrlc/: Cargo.toml
q-ctrlc/src/: main.rs
reborrowing/: Cargo.toml
reborrowing/src/: main.rs
