[package]
name = "l-polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.25.1", features = ["describe"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
