[package]
name = "l-reqwest"
version = "0.1.0"
edition = "2021"


[[bin]] # Bin to run the HelloWorld gRPC server
name = "main1"
path = "src/main1.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive = "1.0.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0.89"
syn = "1.0.105"
tokio = { version = "1.22.0", features = ["full"] }
