[package]
name = "l-sea-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm =  { version = "0.10.4", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

